# off_explorer

./: .codecov.yml  .gitignore  .pre-commit-ci.yaml  .pre-commit-config.yaml  CHANGELOG.md  README.md  app.py  data.parquet  help.sh  makefile  pyproject.toml
.github/workflows/: ci.yml
src/off_streamlit_app/: main.py  pyproject.toml  utils.py
tests/: conftest.py  test_main.py  test_utils.py
